<resources>
    <string name="app_name">NEHA</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="phone">Phone No.</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_reenter">Re-Enter Password</string>
    <string name="login_now">LOGIN</string>
    <string name="signup_now">SIGN UP</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
